#pragma once

#include "User.h"

class Manager : User{

public:
    void showMenu();

};


