#pragma once

class User {
public:
    virtual void showMenu();
};
